methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: Missing closing brace `}' assumed here
var x=0 
^MethodsReturning:1: error: expected class or object definition
var x=0 
^MethodsReturning:2: error: expected class or object definition
var sawBaggle=false 
^MethodsReturning:3: error: expected class or object definition
var y=0
^MethodsReturning:4: error: expected class or object definition
def haveBaggle():Boolean = {
^